--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   <div class="bars">
                     <div class="info">
                         <span><font color = "white">Mongo DB</font></span>
-                        <span><font color = "white">50%</font></span>
+                        <span><font color = "white">70%</font></span>
                     </div>
                     <div class="line mongodb"></div>
                   </div>
@@ -137,7 +137,7 @@
               <div class="column right">      
                   <div class="bars">
                       <div class="info">
-                          <span><font color = "white">MySQL</font></span>
+                          <span><font color = "white">React JS</font></span>
                           <span><font color = "white">80%</font></span>
                       </div>
                       <div class="line mysql"></div>
@@ -157,37 +157,57 @@
     
   </section>
     <!-- blogs section starts -->
-    <section class="blogs" id="blogs">
-      <h1 class="heading"><span>my projects</span></h1>
-      <div class="box-container">
-        <div class="box">
-          <div class="image">
-            <img src="vehicle.jpg" alt="" />
-          </div>
-          <div class="content">
-            <h2>Renewable Source Vehicle</h2>
-            <p>
-              Integrating renewable energy, like solar power, into automotive technologies for a more sustainable future.
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="image">
-            <img src="edu.jpg" alt="" />
-          </div>
-          <div class="content">
-            <h2>Next Edu</h2>
-            <p>
-          
-Created a website to search for course availability and other details about education.
-            </p>
-          </div>
-        </div>
+<section class="blogs" id="blogs">
+  <h1 class="heading"><span>my projects</span></h1>
+  <div class="box-container">
+    <div class="box">
+      <div class="image">
+        <img src="vehicle.jpg" alt="" />
       </div>
-    </section>
-    <!-- blogs section ends -->
+      <div class="content">
+        <h2>Renewable Source Vehicle</h2>
+        <p>
+          Integrating renewable energy, like solar power, into automotive technologies for a more sustainable future.
+        </p>
+      </div>
+    </div>
+    <div class="box">
+      <div class="image">
+        <img src="edu.jpg" alt="" />
+      </div>
+      <div class="content">
+        <h2>Next Edu</h2>
+        <p>
+          Created a website to search for course availability and other details about education.
+        </p>
+      </div>
+    </div>
+    <div class="box">
+      <div class="image">
+        <img src="pet.jpg" alt="" />
+      </div>
+      <div class="content">
+        <h2>Pet Adoption Platform</h2>
+        <p>
+          Designed a user-friendly platform for pet adoption, including features for filtering by breed, age, and location to connect adopters with their ideal pets.
+        </p>
+      </div>
+    </div>
+    <div class="box">
+      <div class="image">
+        <img src="plant.webp" alt="" />
+      </div>
+      <div class="content">
+        <h2>Plant Tissue Culture</h2>
+        <p>
+          Leveraged a machine learning model to predict the most suitable growth medium for plant tissue culture and estimate the success rate of plant development.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- blogs section ends -->
 
-    <!-- contact section starts -->
     <section class="contact" id="contact">
       <h1 class="heading"><span>get in touch</span></h1>
       <div class="col-container">
@@ -244,3 +264,4 @@ Created a website to search for course availability and other details about educ
     <script src="script.js"></script>
   </body>
 </html>
+
