--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
           <div class="box">
             <span><i class="material-icons">calendar_today</i> Nov 2022 - April 2026</span>
             <h3>B.E Computer Science And Engineering</h3>
-            <p class="university">Kongu Engineering College</p>
+            <p class="university">Kongu Engineering College - CGPA 8.4</p>
             <p>Perundurai, Erode</p>
           </div>
           <div class="box">
             <span><i class="material-icons">calendar_today</i> Jun 2021 - Mar 2022</span>
             <h3>Grade 12</h3>
-            <p class="university">Karur Saraswathi Vidhyalaya Higher Secondary School</p>
+            <p class="university">Karur Saraswathi Vidhyalaya Higher Secondary School - Percentage 93.83%</p>
             <p>Karur</p>
           </div>
           <div class="box">
             <span><i class="material-icons">calendar_today</i> June 2019 - Mar 2020</span>
             <h3>Grade 10</h3>
-            <p class="university">Kaveri Matriculation School</p>
+            <p class="university">Kaveri Matriculation School - Percentage 97.8%</p>
             <p>Karur</p>
           </div>
         </div>
@@ -77,7 +77,9 @@
           <p>
             I am a self-motivated individual with a passion for continuous learning and innovation. I thrive on exploring new technologies and acquiring new skills. Collaboration is key to success, and I enjoy working with my teams on projects to achieve our goals.
           </p>
-          <a href="#" class="btn">Download Resume</a>
+         
+
+
         </div>
       </div>
     </section>
@@ -127,6 +129,13 @@
                     </div>
                     <div class="line mongodb"></div>
                   </div>
+                  <div class="bars">
+                    <div class="info">
+                        <span><font color = "white">SQL</font></span>
+                        <span><font color = "white">80%</font></span>
+                    </div>
+                    <div class="line css"></div>
+                </div>
               </div>
               </div>
             </div>    
@@ -162,35 +171,25 @@
   <div class="box-container">
     <div class="box">
       <div class="image">
-        <img src="vehicle.jpg" alt="" />
-      </div>
-      <div class="content">
-        <h2>Renewable Source Vehicle</h2>
-        <p>
-          Integrating renewable energy, like solar power, into automotive technologies for a more sustainable future.
-        </p>
-      </div>
-    </div>
-    <div class="box">
-      <div class="image">
-        <img src="edu.jpg" alt="" />
-      </div>
-      <div class="content">
-        <h2>Next Edu</h2>
-        <p>
-          Created a website to search for course availability and other details about education.
-        </p>
-      </div>
-    </div>
-    <div class="box">
-      <div class="image">
-        <img src="pet.jpg" alt="" />
+        <img src="pet1.jpg" alt="" />
       </div>
       <div class="content">
         <h2>Pet Adoption Platform</h2>
         <p>
-          Designed a user-friendly platform for pet adoption, including features for filtering by breed, age, and location to connect adopters with their ideal pets.
+          The Pet Adoption Platform is an interactive application that connects prospective pet shelters with animals in 
+need of homes. Users can browse available pets, view detailed profiles, and submit adoption requests.
         </p>
+      </div>
+    </div>
+    <div class="box">
+      <div class="image">
+        <img src="habit.jpg" alt="" />
+      </div>
+      <div class="content">
+        <h2>Habit Tracking System</h2>
+        
+        <p>Easily track and manage your habits by adding new goals. View completed and pending habits separately for 
+          better progress monitoring. Visualize your completed habits.</p>
       </div>
     </div>
     <div class="box">
@@ -200,7 +199,9 @@
       <div class="content">
         <h2>Plant Tissue Culture</h2>
         <p>
-          Leveraged a machine learning model to predict the most suitable growth medium for plant tissue culture and estimate the success rate of plant development.
+          The Plant Tissue Culture Predictor leverages machine learning to optimize culture medium selection and 
+enhance success rates. By training a RandomForest model with hyperparameter tuning, I achieved an
+accuracy of 70%, improving predictions for plant tissue culture conditions.
         </p>
       </div>
     </div>
@@ -264,4 +265,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
